[project]
name = "geolocation-catalogue"
version = "1.0.0"
description = ""
authors = [
    {name = "Patryk Pankiewicz",email = "patryk.pankiewicz369@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi (>=0.115.11,<0.116.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "requests (>=2.32.3,<3.0.0)",
    "pydantic (>=2.10.6,<3.0.0)",
    "sqlalchemy (>=2.0.39,<3.0.0)",
    "alembic (>=1.15.1,<2.0.0)",
    "pydantic-settings (>=2.8.1,<3.0.0)",
    "psycopg2 (>=2.9.10,<3.0.0)",
    "stamina (>=25.1.0,<26.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-coverage = "^0.0"
pytest-env = "^1.1.5"
httpx = "^0.28.1"
pre-commit = "^4.1.0"
responses = "^0.25.7"

[tool.pytest.ini_options]
addopts = "--cov geolocation_catalogue"
testpaths = [
    "tests",
]
env = [
    "pg_dsn=postgresql://user:mysecretpassword@localhost:5432/postgres",
    "ip_stack_api_access_key="
]
